fixed spacing and sizing if idioms

--- a/Week10/styles.css
+++ b/Week10/styles.css
@@ -1,7 +1,7 @@
 #map {
 	top:10px;
 	bottom: 100px; 
-	left: 100px;
+	left: 400px;
 	right: 400px;
 	font-family: Arial, Helvetica, sans-serif;
 	/*height: 1000px;
@@ -11,9 +11,10 @@
 #heatmap {
 	top:10px;
 	bottom: 100px; 
-	left: 100px;
+	left: 400px;
 	right: 400px;
 	font-family: Arial, Helvetica, sans-serif;
+	padding-bottom: 50px;
 	/*height: 1000px;
 	width: 800px;*/
 }
